--- a/styles.css
+++ b/styles.css
@@ -378,6 +378,7 @@ a {
   height: 55px;
   background-color: #fff;
   margin: 1.5rem auto;
+  border-bottom: #0a0a0a;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -400,8 +401,14 @@ a {
   z-index: 2;
 }
 
-
+.divider {
+    width: 100%;
+    height: 1px;               /* or a fixed px value */
+    background: #ccc;
+    /* margin: 0 16px;            space around the line */
+  }
 .integration-info h3 {
+    border-top: #0a0a0a;
   margin: 0.5rem 0 0.3rem;
   font-size: 1rem;
 }
