--- a/styles.css
+++ b/styles.css
@@ -82,10 +82,11 @@ a {
 /* Entire Hero Section */
 .hero {
     background-color: #382479;
-    color: #ffffff;
-    padding: 8rem 1.5rem 5rem;
+    color: #fff;
+    padding: 8px 80px;
     min-height: 100vh;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
 }
 .hero-container {
@@ -105,27 +106,25 @@ a {
     font-size: 2.75rem;
     font-weight: 700;
     line-height: 1.2;
-    margin-bottom: 1.5rem;
+    margin-bottom: 16px;
 }
 .hero-subheading {
     font-size: 1.25rem;
     font-weight: 500;
     color: #e5e4f2;
     max-width: 90%;
+    margin-bottom: 20px;
 }
 .hero-right img {
+    position: relative;
     width: 100%;
     height: auto;
     max-width: 700px;
     display: block;
     margin: 0 auto;
-    animation: floatImage 3.5s ease-in-out infinite;
+    right: -30px;
 }
-@keyframes floatImage {
-    0% { transform: translateY(0px); }
-    50% { transform: translateY(-10px); }
-    100% { transform: translateY(0px); }
-}
+
 .btn-hero-primary {
     display: inline-block;
     padding: 12px 24px;
@@ -282,11 +281,6 @@ a {
   transition: transform 0.3s ease;
 }
 
-.integration-card:hover {
-  transform: translateY(-5px);
-}
-
-
 .integration-card .hexagon {
   background-color: #fff;
   clip-path: polygon(25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%, 0% 50%);
@@ -389,11 +383,21 @@ a {
     100% 50%, 75% 100%,
     25% 100%, 0% 50%
   );
-
   /* Elevation */
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
-  z-index: 1;
+ box-shadow:
+    0 20px 40px rgba(0, 0, 0, 0.05),  /* subtle downward soft glow */
+    0 2px 4px rgba(0, 0, 0, 0.1);     /* sharper light shadow */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  margin: 20px auto;
 }
+
+.hexagon:hover {
+  transform: translateY(-4px);
+  box-shadow:
+    0 25px 50px rgba(0, 0, 0, 0.1),
+    0 4px 8px rgba(0, 0, 0, 0.15);
+}
+
 
 .hexagon img {
   max-width: 50%;
@@ -403,10 +407,10 @@ a {
 
 .divider {
     width: 100%;
-    height: 1px;               /* or a fixed px value */
-    background: #ccc;
-    /* margin: 0 16px;            space around the line */
+    height: 1px;               
+    background: #ccc;      
   }
+
 .integration-info h3 {
     border-top: #0a0a0a;
   margin: 0.5rem 0 0.3rem;
