--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ a {
     max-width: 700px;
     display: block;
     margin: 0 auto;
-    right: -30px;
+   /* right: -30px; */
 }
 
 .btn-hero-primary {
