--- a/styles.css
+++ b/styles.css
@@ -158,14 +158,18 @@ a {
     padding: 0.8rem 1.5rem;
     background-color: #f6eff8;
     color: #6147b0;
-    font-weight: 600;
+    font-weight: 900;
+    font-size: 0.9rem;
     border: none;
     border-radius: 0.3rem;
     cursor: pointer;
     text-align: center;
     width: 12rem;
 }
-
+.btnn-primary:hover {
+    background-color: #7b1fa2;
+    color: #ffffff;
+}
 .btn-primary:hover {
     background-color: #7b1fa2;
 }
@@ -193,9 +197,9 @@ a {
     margin-bottom: 0;
 }
 .showcase-item {
-    max-width: 1200px;
+    max-width: 2400px;
     margin: 0 auto 5rem;
-    padding: 0 1.5rem;
+    padding: 0 5rem;
 }
 .showcase-container {
     display: grid;
@@ -213,7 +217,7 @@ a {
     grid-area: visual;
 }
 .showcase-subtitle {
-    font-size: 1.125rem;
+    font-size: 2.125rem;
     font-weight: 600;
     color: #0a0a0a;
     margin-bottom: 0.5rem;
