--- a/styles.css
+++ b/styles.css
@@ -249,7 +249,7 @@ a {
 }
 
 .integration-card {
-  background: #f9f9f9;
+  background: #fff;
   height: 100%;
   /* padding: 1.5rem 1rem; */
   border-radius: 12px;
@@ -317,7 +317,7 @@ a {
   /* padding: 1rem; */
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
   border-radius: 12px;
-  background: #f9f9f9;
+  background: #fff;
   transition: transform 0.3s ease;
 }
 
