--- a/styles.css
+++ b/styles.css
@@ -613,12 +613,49 @@ a {
     padding: 1.5rem 4rem 0 4rem;
 }
 
-
-/* Testimonials for Mobile section */
 .testimonials-mobile {
-    display: none;
-    padding: 0rem;
+    display: block;
+    padding: 1.5rem;
+    margin: 5rem auto;
+    max-width: 900px;
+    background-color: #ffffff;
+    border: 1px solid #e0e0e0;
+    border-radius: 12px;
+    box-shadow: 0 8px 18px 8px rgba(50, 50, 50, 0.409);
 }
+.testimonial-title {
+        text-align: center;
+        font-size: 2.6rem;
+        margin-bottom: 1rem;
+        font-weight: 600;
+        color: #222;
+    }
+.testimonial-description {
+    font-size: 1.5rem;
+    line-height: 1.6;
+    color: #555;
+    margin-bottom: 1.5rem;
+    padding: 0 1.5rem 1rem 1.5rem;
+    text-align: center;
+}
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
+}
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 10px;
+}
+
 @media (max-width: 767px) {
     .testimonials-mobile {
         display: block;
@@ -631,11 +668,19 @@ a {
     }
     .testimonial-title {
         text-align: center;
-        font-size: 1.2rem;
+        font-size: 1.8rem;
         margin-bottom: 1rem;
         font-weight: 600;
         color: #222;
     }
+    .testimonial-description {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    color: #555;
+    margin-bottom: 1.5rem;
+    padding: 0 1.5rem 1rem 1.5rem;
+    text-align: center;
+}
     .video-container {
         position: relative;
         padding-bottom: 56.25%;
