--- a/styles.css
+++ b/styles.css
@@ -624,7 +624,7 @@ a {
 }
 
 .additional-info {
-    padding: 1.8rem;
+    padding: 1.5rem;
     background-color: #5f3aa3;
     color: #fff;
     border-radius: 12px;
@@ -639,12 +639,12 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-bottom: 1rem;
+    padding-bottom: 0.5rem;
 }
 .additional-info .info-title {
     font-size: 2.4rem;
     font-weight: 600;
-    margin-bottom: 1rem;
+    margin-bottom: auto;
 }
 .additional-info .info-description {
     font-size: 1.2rem;
