--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,6 @@ a {
     gap: 3rem;
 }
 .hero-right{
-  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -67,7 +66,7 @@ a {
     padding: 14px 32px;
     background: white;
     color: #a633cc;
-    font-weight: 1500;
+    font-weight: 700;
     border: none;
     border-radius: 0;
     cursor: pointer;
@@ -106,11 +105,8 @@ a {
 .btnn-primary:hover {
     background-color: #e0d6e5;
     /* border: rgb(37, 110, 255) 3px solid; */
-    background-color: #e0d6e5;
-    /* border: rgb(37, 110, 255) 3px solid; */
 }
 .btn-primary:hover {
-    background-color: #583893;
     background-color: #583893;
 }
 .hero-visual img {
@@ -253,8 +249,6 @@ a {
 .hexagon-wrapper {
   /* width: 111px;
   height: 111px; */
-  /* width: 111px;
-  height: 111px; */
   margin: 0 auto 1rem;
   filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.08));
 
@@ -305,7 +299,6 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 1rem;
   padding: 1rem;
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
   border-radius: 12px;
@@ -490,7 +483,9 @@ a {
     .header {
         backdrop-filter: blur(10px);
     }
-
+    .hero {
+    padding: 2rem 1rem;
+    }
     .hero-container {
         grid-template-columns: 1fr;
         text-align: center;
@@ -796,4 +791,4 @@ a {
         border: none;
         border-radius: 10px;
     }
-}
+
